# RLM-Engine

./: .gitignore  CONTEXT.md  README.md  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml
src/: __init__.py  main.py
src/layer1_input/: __init__.py  context_repr.py  metadata_provider.py  raw_loader.py
src/layer2_controller/: __init__.py  code_generator.py  control_flow.py  controller.py  planner.py
src/layer3_execution/: __init__.py  runtime_engine.py  sandbox.py  state_store.py  tool_interface.py
src/layer4_recursion/: __init__.py  recursion_manager.py  result_integrator.py  sub_llm_invoker.py  subtask_constructor.py
src/layer5_context_access/: __init__.py  chunker.py  filter.py  probe.py  traversal.py
src/layer6_output/: __init__.py  aggregator.py  finalizer.py  intermediate_store.py  output_manager.py
src/layer7_control/: __init__.py  budget_manager.py  execution_monitor.py  recursion_guard.py  step_limiter.py  token_tracker.py
src/layer8_evaluation/: __init__.py  evaluator.py
src/layer8_evaluation/baselines/: __init__.py  codeact_agent.py  summary_agent.py
src/layer8_evaluation/benchmarks/: __init__.py  browsecomp.py  codeqa.py  oolong.py  oolong_pairs.py  s_niah.py
src/layer8_evaluation/metrics/: __init__.py  accuracy.py  cost.py  scaling.py
src/shared/: __init__.py  constants.py  groq_client.py  types.py  utils.py
tests/: test_code_generator.py  test_context_access.py  test_control.py  test_controller.py  test_evaluation.py  test_execution.py  test_input_layer.py  test_output.py  test_recursion.py
